--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "backend",
+  "name": "recycle-bharat-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "E-Waste Management & Tracking Application - Backend API",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -13,13 +13,15 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "axios": "^1.13.2",
+    "axios": "^1.13.3",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
+    "morgan": "^1.10.1",
     "pg": "^8.17.2",
     "uuid": "^13.0.0"
   },
